[workspace]
members = ["razy-importer", "razy-importer-macros", "razy-test"]

[workspace.package]
authors    = ["Kento Oki <hrn832@protonmail.com>"]
repository = "https://github.com/kkent030315/razy_importer"
keywords   = ["obfuscation"]
license    = "Apache-2.0"
edition    = "2021"
readme     = "README.md"

[profile.release]
panic         = "abort"
codegen-units = 1
lto           = true
incremental   = false
opt-level     = "s"
