[package]
name        = "razy-importer"
description = "Rust implementation of lazy_importer"
version     = "0.1.2"
readme      = "../README.MD"
edition     = { workspace = true }
license     = { workspace = true }
repository  = { workspace = true }
authors     = { workspace = true }
keywords    = { workspace = true }

[dev-dependencies]
speculate    = "0.1.2"
assert_hex   = "0.2.2"
const-random = "0.1.15"
winapi       = { version = "0.3", features = ["libloaderapi"] }

[dependencies]
ntapi      = "0.4.1"
mem_macros = "1.0.1"
