[package]
name        = "razy-importer"
description = "Rust implementation of lazy_importer"
version     = "0.3.4"
readme      = "../README.MD"
edition     = { workspace = true }
license     = { workspace = true }
repository  = { workspace = true }
authors     = { workspace = true }
keywords    = { workspace = true }

[dev-dependencies]
speculate  = "0.1.2"
assert_hex = "0.2.2"
winapi     = { version = "0.3.9", features = ["libloaderapi"] }

[dependencies]
winapi       = "0.3.9"
ntapi        = "0.4.1"
mem_macros   = "1.0.1"
const-random = "0.1.15"

[features]
default        = []
case-sensitive = []
